# OISSTv2.1

./: CMakeLists.txt  README.md
cmake/: FindNetCDF.cmake_worked  compiler_flags_GNU_CXX.cmake  compiler_flags_GNU_Fortran.cmake  oisst_compiler_flags.cmake
data/: buoy4sm-nsr-stat-v2_Ligang_Noise2SignalRatio.nc  cice4sm-nsr-stat-v2_Ligang_Satellite_Noise2SignalRatio.nc  clim.71.00.gdat_Ligang_sst_climatology.nc  daily-fzsst.0117_Ligang.nc  day_path4sm-nsr-stat-v2_Ligang_Satellite_Noise2SignalRatio.nc  dsobs.20160117_satA_Ligang_wrong.nc  error-cor-stat-v2_Ligang_fg_correction.nc  ice_flags_mask.dat_Ligang.nc  icecon-med.20160117_ligang.nc  icecon.20160117_Ligang.nc  icecon720x360.20160117_Ligang.nc  icesst.20160117_Ligang_sobs.nc  icesst.20160117_grid_ligang.nc  lstags.twodeg_Ligang.nc  nbias.20160117_Ligang_eot_bias.nc  nsobs.20160117_satA_Ligang_wrong.nc  nsobsc.20160117_Ligang_BiasCorrected.nc  nte_path4sm-nsr-stat-v2_Ligang_Satellite_Noise2SignalRatio.nc  nwt.20160117_Ligang_eot_weight.nc  obs_argo_grid.20160117_Ligang.nc  obs_buoy_grid.20160117_Ligang.nc  obs_ship_grid.20160117_Ligang.nc  path-incr-var-stat-v2_Ligang_fg_err_variance.nc  quarter-mask-extend_Ligang.nc  residual-stat-v2_Ligang_residual_bias.nc  ship4sm-nsr-stat-v2_Ligang_Noise2SignalRatio.nc  sst4-metopab-eot-intv2.20160116_Ligang.nc  stdev1d-coads3-fill_Ligang.nc  var-mode_ligang.nc
doc/: oisst_doc.docx
script/ACSPO_L3C2OI/: check_missing_files.py  convert_ACSPO-L3C_sobsc_bin1d2nc2d.py  convert_ACSPO-L3C_sobsc_bin1d2nc2d.tcsh  missing_files_l3c.txt  missing_files_l3s.txt  (+5 more)
src/: note_Ligang.txt
(+131 files in other folders)
